# russiannames

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.cursor/commands/: openspec-proposal.md
.github/workflows/: ci.yml
data/jsonl/: names.jsonl
docs/: conf.py  index.rst  modules.rst  russiannames.rst
openspec/: project.md
openspec/changes/archive/2026-07-10-improve-quality-and-tooling/: design.md  tasks.md
openspec/changes/archive/2026-07-10-improve-quality-and-tooling/specs/data-pipeline/: spec.md
openspec/changes/archive/2026-07-10-improve-quality-and-tooling/specs/packaging/: spec.md
openspec/changes/archive/2026-07-10-refactor-storage-to-duckdb/: proposal.md
openspec/changes/archive/2026-07-10-refactor-storage-to-duckdb/specs/data-pipeline/: spec.md
openspec/changes/archive/2026-07-10-refactor-storage-to-duckdb/specs/name-classification/: spec.md
openspec/changes/improve-quality-and-tooling/: proposal.md
openspec/changes/improve-quality-and-tooling/specs/name-parsing/: spec.md
openspec/changes/refactor-storage-to-duckdb/: design.md  tasks.md
openspec/changes/refactor-storage-to-duckdb/specs/name-datastore/: spec.md
openspec/specs/data-pipeline/: spec.md
openspec/specs/name-classification/: spec.md
openspec/specs/name-datastore/: spec.md
openspec/specs/name-parsing/: spec.md
openspec/specs/packaging/: spec.md
russiannames/: __init__.py  cli.py  consts.py  datastore.py  parser.py  processor.py  reader.py
russiannames/data/: midnames.parquet  names.parquet
scripts/: cross-check.py  differences.csv
tests/: test_classify.py  test_datastore.py  test_parser.py
(+2 files in other folders)
